@@ -3,3 +3,6 @@ pump-with-adjustable-flow-rate=Pump with adjustable flow rate
 
 [fluid-name]
 pump-with-adjustable-flow-rate=Virtual signal [img=virtual-signal/signal-F]
+
+[space-location-name]
+pump-with-adjustable-flow-rate=Pump with adjustable flow rate
